crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__dict__double_star_comprehension.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/dict/double_star_comprehension.py
---
## AST

```
Module(
    ModModule {
        range: 0..358,
        body: [
            Expr(
                ExprStmt {
                    range: 122..147,
                    value: Dict(
                        DictExpr {
                            range: 122..147,
                            items: [
                                DictItem {
                                    key: None,
                                    value: Name(
                                        NameExpr {
                                            range: 125..126,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 128..129,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        NameExpr {
                                            range: 130..133,
                                            id: Name("for"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 134..135,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        NameExpr {
                                            range: 135..135,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        Compare(
                                            CompareExpr {
                                                range: 137..146,
                                                left: Name(
                                                    NameExpr {
                                                        range: 137..138,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ops: [
                                                    In,
                                                ],
                                                comparators: [
                                                    Name(
                                                        NameExpr {
                                                            range: 142..146,
                                                            id: Name("data"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        NameExpr {
                                            range: 146..146,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
2 | # it's actually a comprehension.
3 | 
4 | {**x: y for x, y in data}
  |     ^ Syntax Error: Expected an expression or a '}'
5 | 
6 | # TODO(dhruvmanila): This test case fails because there's no way to represent `**y`
  |


  |
2 | # it's actually a comprehension.
3 | 
4 | {**x: y for x, y in data}
  |         ^^^ Syntax Error: Expected ':', found 'for'
5 | 
6 | # TODO(dhruvmanila): This test case fails because there's no way to represent `**y`
  |


  |
2 | # it's actually a comprehension.
3 | 
4 | {**x: y for x, y in data}
  |             ^ Syntax Error: Expected ',', found name
5 | 
6 | # TODO(dhruvmanila): This test case fails because there's no way to represent `**y`
  |


  |
2 | # it's actually a comprehension.
3 | 
4 | {**x: y for x, y in data}
  |              ^ Syntax Error: Expected ':', found ','
5 | 
6 | # TODO(dhruvmanila): This test case fails because there's no way to represent `**y`
  |


  |
2 | # it's actually a comprehension.
3 | 
4 | {**x: y for x, y in data}
  |                         ^ Syntax Error: Expected ':', found '}'
5 | 
6 | # TODO(dhruvmanila): This test case fails because there's no way to represent `**y`
  |
